--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#195bde",
-        "activityBar.background": "#195bde",
+        "activityBar.activeBackground": "#bf4f12",
+        "activityBar.background": "#bf4f12",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#ef709a",
+        "activityBarBadge.background": "#13cc54",
         "activityBarBadge.foreground": "#15202b",
         "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#195bde",
-        "statusBar.background": "#1448b0",
+        "sash.hoverBorder": "#bf4f12",
+        "statusBar.background": "#913c0e",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#195bde",
-        "statusBarItem.remoteBackground": "#1448b0",
+        "statusBarItem.hoverBackground": "#bf4f12",
+        "statusBarItem.remoteBackground": "#913c0e",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#1448b0",
+        "titleBar.activeBackground": "#913c0e",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#1448b099",
+        "titleBar.inactiveBackground": "#913c0e99",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#1448b0"
+    "peacock.color": "#913c0e"
 }
