--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.11.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.17",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
