Add GitHub Pages configuration and deployment workflow
- Configure Next.js for static export (output: 'export')
- Add export and deploy scripts to package.json
- Create GitHub Actions workflow for automatic deployment
- Enable trailing slashes and unoptimized images for static hosting

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "export": "next build && next export",
+    "deploy": "npm run export"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
